tests/ui/cve/cve_2021_15551/cve_2021_15551_patched.stderr
error: it is possible to double-drop the `VecSlice`'s buffer if the `grow` method is called with a capacity that is equal to the current capacity, which can lead to use-after-free and double-free bugs
  --> tests/ui/cve/cve_2021_15551/cve_2021_15551_patched.rs:256:13
   |
LL |             deallocate(ptr, cap);
   |             ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(rpl::double_drop_on_corner_case)]` on by default

error: aborting due to 1 previous error

